--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
   <meta name="msapplication-TileImage" content="./images/hello-icon-144.png">
   <meta name="msapplication-TileColor" content="#FFFFFF">
 </head>
-<body class="fullscreen">
-  <div class="container">
-    <h1 class="title">Hello World!</h1>
+<!-- <body class="fullscreen"> -->
+<body>  
+  <div class="container"> 
+    <iframe class="responsive-iframe" src="https://mylocalstreet.com/"></iframe>
   </div>
   <script src="./js/main.js"></script>
 </body>
