--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- <body class="fullscreen"> -->
 <body>  
   <div class="container"> 
-    <iframe class="responsive-iframe" src="https://mylocalstreet.com/"></iframe>
+    <iframe class="responsive-iframe" src="https://kyc-demo.verif-y.com/"></iframe>
   </div>
   <script src="./js/main.js"></script>
 </body>
