--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
   <meta name="msapplication-TileImage" content="./images/hello-icon-144.png">
   <meta name="msapplication-TileColor" content="#FFFFFF">
 </head>
-<!-- <body class="fullscreen"> -->
-<body>  
+<!--<body>  
   <div class="container"> 
     <iframe class="responsive-iframe" src="https://kyc-demo.verif-y.com/"></iframe>
   </div>
   <script src="./js/main.js"></script>
-</body>
+</body>-->
+<body class="fullscreen">
+  <div class="container">
+    <h1 class="title">PWA Hello!</h1>
+  </div>
+  <script src="js/main.js"></script>
+</body>  
 </html>
