--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta name="msapplication-TileColor" content="#FFFFFF">
 </head>
 <!--<body>  
-  <div class="container"> 
+  <div class="containers"> 
     <iframe class="responsive-iframe" src="https://kyc-demo.verif-y.com/"></iframe>
   </div>
   <script src="./js/main.js"></script>
