--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </body>-->
 <body class="fullscreen">
   <div class="container">
-    <h1 class="title">PWA Hello!</h1>
+    <h1 class="title">PWA Demo!</h1>
   </div>
   <script src="js/main.js"></script>
 </body>  
