--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 <body class="fullscreen">
   <div class="container">
     <h1 class="title">PWA Demo!</h1>
-    <object data="https://kyc-demo.verif-y.com/" width="600" height="400">
-      <embed src="https://kyc-demo.verif-y.com/" width="600" height="400"> </embed>
+    <object data="https://mylocalstreet.com/" width="600" height="400">
+      <embed src="https://mylocalstreet.com/" width="600" height="400"> </embed>
       Error: Embedded data could not be displayed.
     </object>
   </div>
