--- a/index.html
+++ b/index.html
@@ -15,20 +15,19 @@
   <meta name="msapplication-TileImage" content="./images/hello-icon-144.png">
   <meta name="msapplication-TileColor" content="#FFFFFF">
 </head>
-<!--<body>  
+<body>  
   <div class="containers"> 
-    <iframe class="responsive-iframe" src="https://kyc-demo.verif-y.com/"></iframe>
-  </div>
-  <script src="./js/main.js"></script>
-</body>-->
-<body class="fullscreen">
-  <div class="container">
-    <h1 class="title">PWA Demo!</h1>
-    <object data="https://mylocalstreet.com/" width="600" height="400">
-      <embed src="https://mylocalstreet.com/" width="600" height="400"> </embed>
+    <object data="https://mylocalstreet.com/" >
+      <embed src="https://mylocalstreet.com/" > </embed>
       Error: Embedded data could not be displayed.
     </object>
   </div>
+  <script src="./js/main.js"></script>
+</body>
+<!-- <body class="fullscreen">
+  <div class="container">
+    <h1 class="title">PWA Demo!</h1>
+  </div>
   <script src="js/main.js"></script>
-</body>  
+</body> -->  
 </html>
