--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>  
   <div class="containers"> 
-    <object data="https://mylocalstreet.com/" >
+    <object data="https://mylocalstreet.com/" class="responsive-iframe" >
       <embed src="https://mylocalstreet.com/" > </embed>
       Error: Embedded data could not be displayed.
     </object>
