--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 <body>  
   <div class="containers"> 
-    <object data="https://mylocalstreet.com/" class="responsive-iframe" >
-      <embed src="https://mylocalstreet.com/" > </embed>
+    <object data="https://demo.microblink.com/in-browser-sdk/blinkid" class="responsive-iframe" >
+      <embed src="https://demo.microblink.com/in-browser-sdk/blinkid" > </embed>
       Error: Embedded data could not be displayed.
     </object>
   </div>
