--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
   <meta name="msapplication-TileImage" content="./images/hello-icon-144.png">
   <meta name="msapplication-TileColor" content="#FFFFFF">
 </head>
-<body>  
+<!-- <body>  
   <div class="containers"> 
     <object data="https://blinkid.github.io/blinkid-in-browser/examples/combined/javascript/index.html" class="responsive-iframe" >
       <embed src="https://blinkid.github.io/blinkid-in-browser/examples/combined/javascript/index.html" > </embed>
       Error: Embedded data could not be displayed.
     </object>
-  </div>
+  </div> 
   <script src="./js/main.js"></script>
-</body>
-<!-- <body class="fullscreen">
+</body> -->
+ <body class="fullscreen">
   <div class="container">
     <h1 class="title">PWA Demo!</h1>
   </div>
   <script src="js/main.js"></script>
-</body> -->  
+</body>   
 </html>
